# symbolar

./: .gitignore  Cargo.toml  LICENSE  README.md  performance.txt
.devcontainer/: devcontainer.json
.github/workflows/: ci.yaml
python/: Cargo.toml  pyproject.toml
python/src/: lib.rs
python/tests/: test_dollar_mexico.py
src/: lib.rs  vector_storage.rs
src/expression/: mod.rs  parser.rs
src/storage/: mod.rs  queryable.rs  selector.rs  subset.rs
src/storage/polars_util/: mod.rs  subset.rs
src/vsa/: mod.rs  vector.rs
src/vsa/architectures/: bsc.rs  hrr.rs  map.rs  mod.rs  vtb.rs
tests/: compatibility.rs  dollar_mexico.rs  simple.rs
tests/fixtures/: generate_torchhd_reference.py  input.json  reference.json  torchhd_reference.json
web/: Cargo.toml  README.md  tailwind.css
web/assets/: tailwind.css
web/src/: main.rs
