[package]
name = "polars-vsa"
version = "0.4.0"
edition = "2024"
rust-version = "1.85"
description = "Type-safe Vector Symbolic Architectures with Polars-backed storage and expression execution."
license = "MIT"
readme = "README.md"
repository = "https://github.com/Christopher22/polars-vsa"
homepage = "https://github.com/Christopher22/polars-vsa"
documentation = "https://docs.rs/polars-vsa"
keywords = ["vsa", "hyperdimensional", "polars", "symbolic", "vectors"]
categories = ["algorithms", "data-structures", "science"]

[dependencies]
bitvec = "1.0.1"
parking_lot = "0.12.5"
polars = { version = "0.53.0", features = ["dtype-categorical"] }
rand = "0.10.1"

[dev-dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }