[package]
name = "polars-vsa-py"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "polars_vsa_py"
crate-type = ["cdylib"]

[dependencies]
polars-vsa = { path = ".." }
polars = { version = "0.53.0", features = ["dtype-categorical"] }
pyo3 = { version = "0.27.0", features = ["extension-module"] }
pyo3-polars = "0.26.0"
rand = "0.10.1"
