[build-system]
requires = ["maturin>=1.8,<2.0"]
build-backend = "maturin"

[project]
name = "symbolar"
version = "0.9.0"
description = "Combining vector symbolic architectures with Polars for efficient, scalable, and expressive data manipulation in Python."
requires-python = ">=3.10"
dependencies = ["polars>=1.0"]

[tool.maturin]
bindings = "pyo3"
module-name = "symbolar"
